[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bullet_Orange.gd" type="Script" id=1]
[ext_resource path="res://characters/orange/orange bullet/obul 1.png" type="Texture" id=2]
[ext_resource path="res://characters/orange/orange bullet/obul 2.png" type="Texture" id=3]
[ext_resource path="res://characters/orange/orange bullet/obul 3.png" type="Texture" id=4]
[ext_resource path="res://music/bubble pop.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.1073, 5.60413 )

[node name="Bullet_Orange" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.946678, -7.5734 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.307358, -2.26498e-006 )
scale = Vector2( 0.600436, 0.600436 )

[node name="Shot_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="area_entered" from="." to="." method="_on_Bullet_Orange_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
